--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -20,12 +20,12 @@ jobs:
       condition:
     - script: test.cmd
       displayName: 🔍 Test Windows
-  - ${{ if eq(variables['Agent.OS'], 'Linux')) }}:
+  - ${{ if eq(variables['Agent.OS'], 'Linux') }}:
     - bash: |
         /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
         echo ">>> Started xvfb"
       displayName: 🎮 Start xvfb
-  - ${{ if or(eq(variables['Agent.OS'], 'Darwin'), eq(variables['Agent.OS'], 'Linux'))) }}:
+  - ${{ if or(eq(variables['Agent.OS'], 'Darwin'), eq(variables['Agent.OS'], 'Linux')) }}:
     - script: ./build.sh
       displayName: 🐧 Build Mac and Linux
       condition:
