--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -14,18 +14,18 @@ jobs:
       artifactName: '${{ parameters.pool.os }} logs'
   steps:
   - template: install-node.yaml
-  - ${{ if eq(variables['Agent.OS'], 'Windows_NT') }}:
+  - ${{ if eq(parameters.pool.os, 'windows') }}:
     - script: build.cmd
       displayName: 💻 Build Windows
       condition:
     - script: test.cmd
       displayName: 🔍 Test Windows
-  - ${{ if eq(variables['Agent.OS'], 'Linux') }}:
+  - ${{ if eq(parameters.pool.os, 'linux') }}:
     - bash: |
         /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
         echo ">>> Started xvfb"
       displayName: 🎮 Start xvfb
-  - ${{ if or(eq(variables['Agent.OS'], 'Darwin'), eq(variables['Agent.OS'], 'Linux')) }}:
+  - ${{ if or(eq(parameters.pool.os, 'macOS'), eq(parameters.pool.os, 'linux')) }}:
     - script: ./build.sh
       displayName: 🐧 Build Mac and Linux
       condition:
