--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,13 +21,13 @@ parameters:
 - name: pools
   type: object
   default:
-  - name: $(DncEngInternalBuildPool)
-    image: build.ubuntu.2204.amd64
+  - name: NetCore1ESPool-Internal
+    image: 1es-ubuntu-2204-pt
     os: linux
   - name: Azure Pipelines
     image: macOS-latest
     os: macOS
-  - name: $(DncEngInternalBuildPool)
+  - name: NetCore1ESPool-Internal
     image: 1es-windows-2022-open
     os: windows
 
