try to condition the pool

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,7 @@ stages:
           image: ${{ image.image }}
           vmImage: ${{ image.vmImage }}
           os: ${{ image.os }}
+        oes: false
   - template: pipeline-templates/upstream-verify.yaml
     parameters:
       pool:
