--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -3,7 +3,11 @@ parameters:
 
 jobs:
 - job: ${{ parameters.pool.os }}_Build
-  pool: ${{ parameters.pool }}
+  pool:
+    ${{ if eq(parameters.oes, 'true') }}:
+        ${{ parameters.pool }}
+    ${{ else }}:
+        vmImage: ${{ parameters.pool.vmImage }}
   displayName: '🔨 ${{ parameters.pool.os }} Build and Test'
   templateContext:
     outputs:
