--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -99,6 +99,7 @@
 	},
 	"dependencies": {
 		"@types/chai-as-promised": "^7.1.8",
+		"@vscode/test-electron": "^2.3.9",
 		"axios": "^1.3.4",
 		"axios-cache-interceptor": "^1.0.1",
 		"axios-retry": "^3.4.0",
@@ -121,7 +122,6 @@
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
-		"vscode-test": "^1.6.1",
 		"webpack-permissions-plugin": "^1.0.9",
 		"yarn": "^1.22.19"
 	},
