--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -92,6 +92,7 @@
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
 		"@types/vscode": "1.74.0",
+		"@vscode/test-electron": "^2.3.9",
 		"array-buffer-byte-length": "^1.0.0",
 		"aws4": "^1.12.0",
 		"axios": "^1.3.4",
@@ -115,8 +116,7 @@
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
-		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
-		"vscode-test": "^1.6.1"
+		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library"
 	},
 	"devDependencies": {
 		"@types/source-map-support": "^0.5.6",
