--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -4,7 +4,7 @@ parameters:
 jobs:
   - job: TSLint
     pool:
-      ${{ if eq(parameters.oes, 'true') }}:
+      ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
         ${{ parameters.pool }}
       ${{ else }}:
         vmImage: ${{ parameters.pool.vmImage }}
