--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -4,7 +4,7 @@ parameters:
 jobs:
 - job: ${{ parameters.pool.os }}_Build
   pool:
-    ${{ if eq(parameters.oes, 'true') }}:
+    ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
         ${{ parameters.pool }}
     ${{ else }}:
         vmImage: ${{ parameters.pool.vmImage }}
