--- a/pr-azure-pipeline.yml
+++ b/pr-azure-pipeline.yml
@@ -1,3 +1,6 @@
+# Name: dotnet.vscode-dotnet-runtime
+# URL: https://dev.azure.com/dnceng-public/public/_build?definitionId=60
+
 trigger:
   batch: true
   branches:
@@ -17,18 +20,21 @@ variables:
 - name: Codeql.Enabled
   value: true
 
+# The public PR pool schema is different from the 1ES one. We use 'vmImage' which is a default azure pipeline schema. 'os' and 'name' have nothing to do with image selection here.
+# 1ES uses 'image' but defining an image this way using our public pools duseOneEngineeringPool not work as they aren't configured this way.
+# We can later add the flag 'useOneEngineeringPool' or one engineering system: false or true in all tasks to determine if we use vmImage or a 1es pool object.
 parameters:
 - name: pools
   type: object
   default:
   - name: NetCore-Public
-    vmImage: ubuntu-latest # The public PR pool schema is different from the 1ES one. We use 'vmImage' which is a default azure pipeline schema.
+    vmImage: ubuntu-latest
     os: linux
   - name: NetCore-Public
-    vmImage: macOS-latest # 1ES uses 'image' but defining an image this way using our public pools does not work as they aren't configured this way.
+    vmImage: macOS-latest
     os: macOS
   - name: NetCore-Public
-    vmImage: windows-latest # We add the flag 'oes' or one engineering system: false or true in all tasks to determine if we use vmImage or a 1es pool object.
+    vmImage: windows-latest
     os: windows
 
 stages:
@@ -40,22 +46,22 @@ stages:
         pool:
           vmImage: ${{ image.vmImage }}
           os: ${{ image.os }}
-        oes: false
+        useOneEngineeringPool: false
   - template: pipeline-templates/upstream-verify.yaml
     parameters:
       pool:
         vmImage: windows-latest
         os: windows
-      oes: false
+      useOneEngineeringPool: false
   - template: pipeline-templates/lint.yaml
     parameters:
       pool:
         vmImage: windows-latest
         os: windows
-      oes: false
+      useOneEngineeringPool: false
   - template: pipeline-templates/package-vsix.yaml
     parameters:
       pool:
         vmImage: windows-latest
         os: windows
-      oes: false
+      useOneEngineeringPool: false
