Use official templates so we get counted on the internal pie chart The migration tool and doc examples all use the unofficial one ecks dee
Also create a dupe of the PR pipeline so we can migrate main to that file once it is checked in and then delete the other one to rename it to a more descriptive name.

--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -47,7 +47,7 @@ parameters:
     os: windows
 
 extends:
-  template: v1/1ES.Unofficial.PipelineTemplate.yml@1esPipelines
+  template: v1/1ES.Official.PipelineTemplate.yml@1esPipelines
   parameters:
     sdl:
       sourceAnalysisPool:
