--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -50,7 +50,7 @@
 				"command": "dotnet.acquireGlobalSDKPublic",
 				"title": "Install the .NET SDK System-Wide.",
 				"category": ".NET Install Tool",
-				"enablement": "config.dotnetAcquisitionExtension.enablePreviewFeatures && !dotnetAcquisitionExtension.isGlobalSDKUnsupported"
+				"enablement": "!dotnetAcquisitionExtension.isGlobalSDKUnsupported"
 			}
 		],
 		"configuration": {
