--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"dependencies": {
 		"rimraf": "^5.0.1",
-		"vsce": "2.11.0"
+		"vsce": "^2.15.0"
 	},
 	"devDependencies": {
 		"@types/source-map-support": "^0.5.6"
