--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -73,7 +73,7 @@
 				},
 				"dotnetAcquisitionExtension.existingDotnetPath": {
 					"type": "array",
-					"description": "File Path to an existing installation of .NET. Used for both the .NET SDK and .NET Runtime.",
+					"description": "File Path to an existing installation of .NET to be used by one extension. Used for both the .NET SDK and .NET Runtime.",
 					"examples": [
 						"C:\\Program Files\\dotnet\\dotnet.exe",
 						"/usr/local/share/dotnet/dotnet",
@@ -82,9 +82,11 @@
 				},
 				"dotnetAcquisitionExtension.sharedExistingDotnetPath": {
 					"type": "string",
-					"description": "File Path across all existing installation of .NET. Used for both the .NET SDK and .NET Runtime.",
+					"description": "The path of the preexisting .NET SDK and .NET Runtime you'd like to use for ALL extensions.",
 					"examples": [
-						"/usr/share/dotnet/dotnet"
+						"C:\\Program Files\\dotnet\\dotnet.exe",
+						"/usr/local/share/dotnet/dotnet",
+						"/usr/lib/dotnet/dotnet"
 					]
 				},
 				"dotnetAcquisitionExtension.proxyUrl": {
