--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -54,6 +54,8 @@ extends:
         name: NetCore1ESPool-Internal
         image: 1es-windows-2022
         os: windows
+      sbom:
+        enabled: false # SBOM requires very special setup, and is done in compliance.yml
     stages:
     - stage: Internal
       jobs:
@@ -86,3 +88,7 @@ extends:
             image: 1es-windows-2022
             os: windows
           useOneEngineeringPool: true
+    - stage: Compliance
+        dependsOn: Internal
+        jobs:
+        - template: pipeline-templates/sbom.yaml@self
