--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -120,6 +120,7 @@
 		"hmac-drbg": "^1.0.1",
 		"https-proxy-agent": "^7.0.2",
 		"mocha": "^9.1.3",
+		"mocha-junit-reporter": "^2.2.1",
 		"open": "^8.4.0",
 		"public-ip": "5.0.0",
 		"rimraf": "3.0.2",
