--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -20,7 +20,7 @@
 		"mockPack:win32": "pushd .. && @powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./mock-webpack.ps1 && popd",
 		"watch": "npm run clean && tsc -watch -p ./",
 		"test": "npm run compile --silent && npm run unit-test",
-		"unit-test": "mocha -u tdd -- dist/test/unit/**.test.js",
+		"unit-test": "mocha -u tdd --reporter mocha-junit-reporter --reporter spec -- dist/test/unit/**.test.js",
 		"clean": "rimraf dist"
 	},
 	"devDependencies": {
@@ -51,6 +51,7 @@
 		"http-cache-semantics": "4.1.1",
 		"https-proxy-agent": "^7.0.2",
 		"mocha": "^9.1.3",
+		"mocha-junit-reporter": "^2.2.1",
 		"open": "^8.4.0",
 		"p-retry": "^4.6.1",
 		"proper-lockfile": "^4.1.2",
