--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -108,6 +108,7 @@
 		"http-cache-semantics": "4.1.1",
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
+		"mocha-junit-reporter": "^2.2.1",
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
 		"run-script-os": "^1.1.6",
