--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -50,6 +50,7 @@
 		"proper-lockfile": "^4.1.2",
 		"rimraf": "3.0.2",
 		"run-script-os": "^1.1.6",
+		"semver": "^7.6.2",
 		"shelljs": "0.8.5",
 		"typescript": "4.4.4",
 		"vscode-extension-telemetry": "^0.4.3",
