--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -119,6 +119,7 @@
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
 		"shelljs": "^0.8.5",
+		"ts-loader": "^9.5.1",
 		"typescript": "4.4.4",
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
 		"webpack-permissions-plugin": "^1.0.9"
