--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -106,6 +106,7 @@
 		"run-script-os": "^1.1.6",
 		"shelljs": "^0.8.5",
 		"source-map-support": "^0.5.21",
+		"ts-loader": "^9.5.1",
 		"typescript": "4.4.4",
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library"
 	},
