[wip] create events for all 'modal' events

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "proccom",
         "programfiles",
         "REGHEXVALUE",
-        "REGTYPE"
+        "REGTYPE",
+        "Republisher"
     ],
     "azure-pipelines.1ESPipelineTemplatesSchemaFile": true
 }
