--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -113,25 +113,16 @@
 		"axios-cache-interceptor": "^1.0.1",
 		"axios-retry": "^3.4.0",
 		"chai": "4.3.4",
-		"child_process": "^1.0.2",
-		"diff": ">=5.0.0",
 		"glob": "^7.2.0",
-		"got": "11.8.5",
-		"hmac-drbg": "^1.0.1",
 		"https-proxy-agent": "^7.0.2",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
-		"public-ip": "5.0.0",
 		"rimraf": "3.0.2",
-		"safe-array-concat": "^1.1.0",
-		"safe-regex-test": "^1.0.0",
 		"shelljs": "^0.8.5",
-		"ts-loader": "^9.2.6",
-		"tslint": "^5.20.1",
+		"ts-loader": "^9.5.1",
 		"typescript": "4.4.4",
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
-		"webpack-permissions-plugin": "^1.0.9",
-		"yarn": "^1.22.19"
+		"webpack-permissions-plugin": "^1.0.9"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.3.5",
