--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -42,23 +42,16 @@
 		"axios-retry": "^3.4.0",
 		"chai": "4.3.4",
 		"chai-as-promised": "^7.1.1",
-		"debug": "^4.3.4",
-		"diff": ">=5.0.0",
 		"eol": "^0.9.1",
-		"es-abstract": "^1.19.1",
 		"get-proxy-settings": "^0.1.13",
-		"got": "11.8.5",
-		"http-cache-semantics": "4.1.1",
-		"https-proxy-agent": "^7.0.2",
+		"https-proxy-agent": "^7.0.4",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
-		"p-retry": "^4.6.1",
 		"proper-lockfile": "^4.1.2",
-		"public-ip": "^5.0.0",
 		"rimraf": "3.0.2",
 		"run-script-os": "^1.1.6",
+		"semver": "^7.6.2",
 		"shelljs": "0.8.5",
-		"tslint": "5.20.1",
 		"typescript": "4.4.4",
 		"vscode-extension-telemetry": "^0.4.3",
 		"vscode-test": "^1.6.1"
