--- a/sample/package.json
+++ b/sample/package.json
@@ -122,6 +122,7 @@
 		"@types/mocha": "9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
+		"@types/source-map-support": "^0.5.10",
 		"@types/vscode": "1.74.0",
 		"mocha": "^9.2.2",
 		"rimraf": "3.0.2",
