--- a/sample/package.json
+++ b/sample/package.json
@@ -32,6 +32,11 @@
 				"category": "Sample"
 			},
 			{
+				"command": "sample.dotnet.acquireASPNET",
+				"title": "Acquire ASPNET runtime",
+				"category": "Sample"
+			},
+			{
 				"command": "sample.dotnet.acquireStatus",
 				"title": "Check the status of acquiring the .NET runtime",
 				"category": "Sample"
@@ -44,6 +49,11 @@
 			{
 				"command": "sample.dotnet.concurrentTest",
 				"title": "Concurrently acquire all 2.X .NET Core runtimes",
+				"category": "Sample"
+			},
+			{
+				"command": "sample.dotnet.concurrentASPNETTest",
+				"title": "Concurrently acquire all 2.X ASPNET Core runtimes",
 				"category": "Sample"
 			},
 			{
@@ -112,6 +122,7 @@
 		"@types/mocha": "9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
+		"@types/source-map-support": "^0.5.10",
 		"@types/vscode": "1.74.0",
 		"mocha": "^9.2.2",
 		"rimraf": "3.0.2",
