--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -13,7 +13,7 @@
 	"description": "This extension installs and manages different versions of the .NET SDK and Runtime.",
 	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
 	"icon": "images/dotnetIcon.png",
-	"version": "2.0.6",
+	"version": "2.0.7",
 	"publisher": "ms-dotnettools",
 	"engines": {
 		"vscode": "^1.74.0"
@@ -129,6 +129,7 @@
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
+		"@types/source-map-support": "^0.5.10",
 		"@types/vscode": "1.74.0",
 		"copy-webpack-plugin": "9.0.1",
 		"webpack": "5.88.2",
