--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -47,6 +47,20 @@ jobs:
       vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
     displayName: 📦 Package Artifact
     workingDirectory: $(dir-name)
+  - task: UseDotNet@2
+  displayName: 🔮 Use .NET SDK
+  inputs:
+    packageType: sdk
+    useGlobalJson: true
+  - task: MicroBuildSigningPlugin@4
+    displayName: 🔧 Install MicroBuild Signing Plugin
+    inputs:
+      signType: 'Real'
+      zipSources: false
+    env:
+      TeamName: VS Core
+  - script: dotnet build msbuild/signVsix -v:normal
+    displayName: 🖊️ Sign VSIXes
   - task: CopyFiles@2
     displayName: '📩 Copy Artifact'
     inputs:
