only go up 1 directory

--- a/msbuild/Directory.Build.props
+++ b/msbuild/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
     <PropertyGroup>
-        <RepoRoot>$(MSBuildThisFileDirectory)../../</RepoRoot>
+        <RepoRoot>$(MSBuildThisFileDirectory)../</RepoRoot>
     </PropertyGroup>
 </Project>
