--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -45,7 +45,8 @@ jobs:
   - bash: |
       npm install rimraf --reg https://registry.npmjs.org/ --verbose
       npm install vsce -g --reg https://registry.npmjs.org/ --verbose
-      vsce package -o ../packages/$(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
+      vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
+      cp $(package-name)-$(GetVersion.version).vsix ../
     displayName: 📦 Package Artifact
     workingDirectory: $(dir-name)
   - task: UseDotNet@2
