--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -59,6 +59,7 @@ jobs:
     inputs:
       signType: ${{ parameters.SignType }}
       zipSources: false
+      feedSource: https://dnceng.pkgs.visualstudio.com/_packaging/MicroBuildToolset/nuget/v3/index.json
     env:
       TeamName: DotNetCore
   - script: dotnet build msbuild/signVsix -v:normal
