--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -54,6 +54,11 @@ jobs:
     inputs:
       packageType: sdk
       useGlobalJson: true
+  # This is necessary whenever we want to publish/restore to an AzDO private feed
+  # Since sdk-task.ps1 tries to restore packages we need to do this authentication here
+  # otherwise it'll complain about accessing a private feed.
+  - task: NuGetAuthenticate@1
+    displayName: '🔏 Authenticate to AzDO Feeds'
   - task: MicroBuildSigningPlugin@4
     displayName: 🔧 Install MicroBuild Signing Plugin
     inputs:
