--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -46,7 +46,7 @@ jobs:
       npm install rimraf --reg https://registry.npmjs.org/ --verbose
       npm install vsce -g --reg https://registry.npmjs.org/ --verbose
       vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
-      cp $(package-name)-$(GetVersion.version).vsix ../
+      cp $(package-name)-$(GetVersion.version).vsix ../packages/$(package-name)-$(GetVersion.version).vsix
     displayName: 📦 Package Artifact
     workingDirectory: $(dir-name)
   - task: UseDotNet@2
