--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -71,7 +71,7 @@ jobs:
   - task: CmdLine@2
     displayName: 🤌 Rename Unsigned VSIX
     inputs:
-      script: dir && dir ..\packages && ren ..\packages\$(package-name)-$(GetVersion.version).vsix ..\packages\$(package-name)-$(GetVersion.version)-unsigned.vsix
+      script: rename ".\packages\$(package-name)-$(GetVersion.version).vsix" $(package-name)-$(GetVersion.version)-unsigned.vsix
   - task: CopyFiles@2
     displayName: '📩 Copy Artifact'
     inputs:
