--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
 	},
 	"dependencies": {
 		"@vscode/vsce": "^2.26.1",
-		"rimraf": "^5.0.1"
+		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
-		"@types/source-map-support": "^0.5.6"
+		"@types/source-map-support": "^0.5.6",
+		"rimraf": "3.0.2"
 	}
 }
