--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -43,7 +43,7 @@ jobs:
     workingDirectory: $(dir-name)
   - bash: |
       npm install rimraf --reg https://registry.npmjs.org/ --verbose
-      npm install vsce -g --reg https://registry.npmjs.org/ --verbose
+      npm install @vscode/vsce@latest -g --reg https://registry.npmjs.org/ --verbose
       vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
     displayName: 📦 Package Artifact
     workingDirectory: $(dir-name)
