--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -31,10 +31,10 @@
 	"dependencies": {
 		"@types/chai-as-promised": "^7.1.4",
 		"@types/mocha": "^9.0.0",
-		"@types/node": "16.11.7",
+		"@types/node": "^20.0.0",
 		"@types/rimraf": "3.0.2",
 		"@types/semver": "^7.3.9",
-		"@types/shelljs": "0.8.9",
+		"@types/shelljs": "^0.8.9",
 		"@types/vscode": "1.74.0",
 		"@vscode/sudo-prompt": "^9.3.1",
 		"axios": "^1.7.2",
@@ -51,8 +51,8 @@
 		"rimraf": "3.0.2",
 		"run-script-os": "^1.1.6",
 		"semver": "^7.6.2",
-		"shelljs": "0.8.5",
-		"typescript": "4.4.4",
+		"shelljs": "^0.8.5",
+		"typescript": "^5.5.4",
 		"vscode-extension-telemetry": "^0.4.3",
 		"vscode-test": "^1.6.1"
 	},
