add ui element to pick uninstall
we need to fix the uninstallglobal functoin logic to print out and such still
then test it

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -51,6 +51,11 @@
 				"title": "Install the .NET SDK System-Wide.",
 				"category": ".NET Install Tool",
 				"enablement": "!dotnetAcquisitionExtension.isGlobalSDKUnsupported"
+			},
+            {
+				"command": "dotnet.uninstallPublic",
+				"title": "Uninstall .NET.",
+				"category": ".NET Install Tool"
 			}
 		],
 		"configuration": {
