only run package job in internal because signing tasks do not exist in dnceng public causing public to fail eternally and hang

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -13,7 +13,7 @@ jobs:
   dependsOn:
   - ${{ parameters.pool.os }}_Build
   - TSLint
-  condition: succeeded()
+  condition: {succeeded() && eq(parameters.useOneEngineeringPool, 'true')}
   strategy:
     matrix:
       Runtime:
