✒️ Enable ESRP Signing on the .VSIX (#1885)
* Add fake MSBuild project to allow signing VSIX and JS

* Sign JS

* Add step to pipeline

* Restrict signing package version

* Add scripts to install signing tool locally

* only go up 1 directory

* fix display name

* fix whitespace -__-

* add build step for installing microbuild

* add sign type parameter

* dont produce alpha package in official drop

* add sign type parameter to default pipeline

* dont publish package in another directory as this causes other issues, instead copy the artifact

* acknowledge the existence of a document explaining the release and other maintenance processes

this information is more suited for internal repo changes.

* change internal stream to a different signing stream

* add dotnet public for notargets sdk

* reduce to 1 feed

* use a different feed

* Use dotnet team

* use explicit feed source

* add feed auth

* fix comment

* rename unsigned vsix so both can get dropped

* use the other type of slash for REN -__-

* try to fix path

* add packages folder with empty gitignore

* figure out dir

* fix rename command

* Fix rename

the 'unsigned' one is actually the signed one

* Fix JS File Sign

dist is at the root of each but this runs in a segregated folder

* produce binlogs and try to fix the path

* Publish SDK Extension Logs

* fix signing

* remove bad slash in path that gets parsed incorrectly

* remove \

* fix microbuild to be installed b5 js signing

* update gitignore

* fix gitignore again

* [REVERT THIS] Add a file A.ts to see if files are signed alphabetical or only non minified JS is signed

* [REVERT THIS] Add content to js to see if minify changes signing

* sign js after webpack

maybe we can sign it after the bundle is created and it will  still be able to edit the bundle vsix internals? I thought not but perhaps extension.js is getting replaced by the webpack, so lets

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 TestResults/
 .nuget/
 .build/
+msbuild/signJs/*.log
 .testPublish/
 *.sln.ide/
 _ReSharper.*/
-packages/
 artifacts/
 .build/
 PublishProfiles/
@@ -34,7 +34,6 @@ project.lock.json
 .build/
 .vs/
 launchSettings.json
-global.json
 BenchmarkDotNet.Artifacts/
 msbuild.binlog
 msbuild.log
