move signing prep into another template so we can not push microbuild to staging directory

--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -55,6 +55,12 @@ stages:
       useOneEngineeringPool: false
   - template: pipeline-templates/lint.yaml
     parameters:
+    pool:
+      vmImage: windows-latest
+      os: windows
+    useOneEngineeringPool: false
+  - template: pipeline-templates/package-vsix.yaml
+    parameters:
       pool:
         vmImage: windows-latest
         os: windows
