--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -42,10 +42,10 @@ jobs:
     name: GetVersion
     displayName: '❓ Get Version'
     workingDirectory: $(dir-name)
-  - template: prepare-signing.yaml
-    parameters:
-      SignType: ${{ parameters.SignType }}
-    condition: and(succeeded(), eq('${{ parameters.useOneEngineeringPool }}', 'true'))
+  - ${{ if and(succeeded(), eq('${{ parameters.useOneEngineeringPool }}', 'true')) }}:
+    - template: prepare-signing.yaml
+      parameters:
+        SignType: ${{ parameters.SignType }}
   - bash: |
       npm install rimraf --reg https://registry.npmjs.org/ --verbose
       npm install @vscode/vsce@latest -g --reg https://registry.npmjs.org/ --verbose
