Fix MicroBuild Staging (#1915)
* move signing prep into another template so we can not push microbuild to staging directory

* condition the signing prep

* fix the cond since yaml has dumbest syntax ever

* fix whitespace i hate yaml

* remove junk:

* succeded doesnt work

--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -59,3 +59,9 @@ stages:
         vmImage: windows-latest
         os: windows
       useOneEngineeringPool: false
+  - template: pipeline-templates/package-vsix.yaml
+    parameters:
+      pool:
+        vmImage: windows-latest
+        os: windows
+      useOneEngineeringPool: false
