--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -16,7 +16,7 @@
 	"version": "2.1.2",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "^1.74.0"
+		"vscode": "^1.81.1"
 	},
 	"categories": [
 		"Other"
@@ -51,6 +51,11 @@
 				"title": "Install the .NET SDK System-Wide.",
 				"category": ".NET Install Tool",
 				"enablement": "!dotnetAcquisitionExtension.isGlobalSDKUnsupported"
+			},
+            {
+				"command": "dotnet.uninstallPublic",
+				"title": "Uninstall .NET.",
+				"category": ".NET Install Tool"
 			}
 		],
 		"configuration": {
