--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -4,22 +4,21 @@ parameters:
   version: ''
 
 jobs:
-  ##### Deploy to our release environment #####
   # Note: This step requires approval, allows for manual smoke testing the artifact before release
   - deployment: Deploy
     pool:
       vmImage: ${{ parameters.pool.vmImage }}
-    displayName: '❗ Deploy to Release Environment'
+    displayName: '✨ Deploy to Release Environment'
+    dependsOn:
+    - ${{ parameters.pool.os }}_Package
     environment: 'vscode-dotnetcore-extension-releases'
   - job: Publish
     pool:
-      ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
-          ${{ parameters.pool }}
-      ${{ else }}:
-          vmImage: ${{ parameters.pool.vmImage }}
+      vmImage: ${{ parameters.pool.vmImage }}
     displayName: '🌐 Publish to Marketplace'
     dependsOn:
     - Deploy
+    - ${{ parameters.pool.os }}_Package
     variables:
       version: $[ dependencies.GetVersion.outputs['${{ parameters.version }}'] ]
     steps:
