use vsce latest

--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -29,9 +29,7 @@ jobs:
         path: '$(System.ArtifactsDirectory)'
     - template: install-node.yaml
     - bash: |
-        npm install vsce -g --verbose
-        where vsce
-        echo %PATH%
+        npm install @vscode/vsce@latest -g --reg https://registry.npmjs.org/ --verbose
         vsce publish --packagePath vscode-dotnet-runtime-$(version)-signed.vsix -p $(VSCODE_MARKETPLACE_TOKEN)
       displayName: '🍵 Publish to Marketplace'
       workingDirectory: '$(System.ArtifactsDirectory)/vscode-dotnet-runtime-extension'
