--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -2,13 +2,13 @@ parameters:
   pool: ''
 
 jobs:
-  - job: TSLint
+  - job: ESLint
     pool:
       ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
         ${{ parameters.pool }}
       ${{ else }}:
         vmImage: ${{ parameters.pool.vmImage }}
-    displayName: '🧶 TSLint'
+    displayName: '🧶 ESLint'
     steps:
     - template: install-node.yaml
     - bash: |
