dont empty cache because eslint is failing to register the types that exist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
         "REGTYPE",
         "Republisher"
     ],
-    "azure-pipelines.1ESPipelineTemplatesSchemaFile": true
+    "azure-pipelines.1ESPipelineTemplatesSchemaFile": true,
+    "eslint.options": {
+        "configFile": ".eslintrc.json"
+    }
 }
