--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
 		"@vscode/vsce": "^2.26.1",
 		"eslint": "^8.0.0",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import": "^2.30.0",
 		"eslint-plugin-jsdoc": "^50.2.2",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"typescript": "^5.5.4"
@@ -26,6 +28,8 @@
 		"@typescript-eslint/eslint-plugin": "^8.0.0",
 		"@typescript-eslint/parser": "^8.0.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-node": "^0.3.9",
+		"eslint-plugin-prettier": "^5.2.1",
 		"rimraf": "3.0.2"
 	}
 }
