--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -13,6 +13,6 @@ jobs:
     - template: install-node.yaml
     - bash: |
         npm install
-        npm install eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --reg https://registry.npmjs.org/ --verbose
+        npm install -g eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --reg https://registry.npmjs.org/ --verbose
         npm run lint
       displayName: 🧶 Run Lint
