--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint-plugin-import": "^2.30.0",
 		"eslint-plugin-jsdoc": "^50.2.2",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
+		"tslint": "^6.1.3",
 		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
